welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:2: error: Missing closing brace `}' assumed here
var i = 0
^Poucet:18: error: ';' expected but 'while' found.
} while (!croisement())
  ^Poucet:25: error: 'while' expected but '}' found.
}
^