welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var i = 0
do {
	avance()
if (estSurBiscuit() ) {
	i=i+1
	
 if (i >=3 ) {
 	gauche()
 }
   	
if (i <=2 ) { 
	droite()

	


} while (!croisement())


}
